# raspcar-handwheel-app

./: .gitignore  README.md  raspcar_mediaplayer.service
BTMediaControl/: phone.py  phoneCamille.py  phoneEvents.py
BTMediaControl/requirements/: requirements-dev.txt
BTMediaControl/src/: index.html  mediaPlayerBT.py  server.py  serverBis.py  serverBispy  serverFinalMerge.py
app/: .editorconfig  .eslintrc.js  README.md  package-lock.json  package.json  requirements.txt  vite.config.js
app/lab/: index.html  style.css
app/public/: index.html
app/src/: App.js  App.jsx  App.scss  SocketProvider.jsx  index.css  main.jsx
react-build/: index.html
react-build/assets/: index.2c983af3.js  index.2c983af3.js.map  index.8feb437a.js  index.8feb437a.js.map  index.99eae94f.css  vendor.c4244ced.js
scripts/: build_simulator_spa.sh  install_global.sh  start_main_server.sh  start_simulator.sh  start_simulator_spa.sh  start_webinterface_spa.sh  startup.sh  vcan_script.sh
server/: media_control.py  server.py  server2.py  server3.py  serverArmand.py  serverLeo.py  serverSteven.py  servertest.py  start_server.sh
server/requirements/: requirements-dev.txt  (+1 more)
simulator/: Cargo.toml  test.json
simulator-spa/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
simulator-spa-dist-latest/: index.html  main.012caee63edb730b.js  main.4c75f6551c9257b0.js  main.bb8540f203c2c30d.js  main.e5591c007cf09ebe.js  polyfills.d85169ddc400a2a2.js  runtime.2ee3972f20b377fe.js  styles.aa5880bb4673b3d9.css
simulator/src/: main.rs
simulator/src/simulator/: models.rs
(+33 files in other folders)
