[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
tokio-socketcan = "0.3.1"
futures-util = "0.3.21"
futures-channel = "0.3.21"
env_logger = "0.9.0"
log = "0.4.15"
tokio-tungstenite = "*"
tungstenite = "0.17.2"
serde_json = "1.0.79"
serde = "1.0.79"
serde_derive = "1.0.79"
lazy_static = "1.4.0"
